objects/DF_17__c.object
<CustomObject>
    <fields>
        <fullName>Field_A__c</fullName>
        <label>Field A</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_B__c</fullName>
        <label>Field B</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_C__c</fullName>
        <label>Field C</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>DF 17</label>
    <nameField>
        <label>DF 17  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DF 17 s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>